10/02/2024 - Major Site Overhaul
  - Modified "trigger words"
  - Modified page layout
  - Relocated external downloads
  - Added Other page
  - Added other directory
  - Added PyNet
  - Added Desktop Goose
  - Added xGPT (external download)
  - Added Clustertruck (external download)
  - Added Deltarune (external download)
  - Added Plague Inc. Evolved (external download)
  - Added Spelunky Classic
  - Updated Home page
  - Renamed Admin page to CompassHack page
  - Renamed V!P!N page to tenretteB page
  - Removed NPVykS Install
  - Added Announcement: Once again it has been quite some time. At the beginning of this year the website got flagged and subsequently blocked. However, they have
                        underestimated my power. The website is now back up and running on the new URL. To prevent it from getting blocked again, I have gone in 
                        and censored certain words, primarily "g@me" and "V!P!N". In addition, I have added several new g@mes, as well as several previously promised 
                        programs. This is the biggest update since the site's launch, so unless it gets blocked again, this will be the last one for some time. If
                        there are any issues, please contact me, I have literally nothing better to do.

04/01/2024 - Minor Additions and Bug "Fixes"
  - Added Karlson 2D
  - Added tenretteB Install
  - Removed Admin page link
  - Added Announcement: It appears that for some bizzare reason the admin program only works properly when run from an external drive, which kinda means that all 
                        that time I spent implementing the admin download was for nothing. If you still want admin, contact me and I can give it to you directly 
                        from my USB.

03/27/2024 - Improvements
  - Relocated g@mes to "g@mes" directory

03/26/2024 - Admin Update
  - Added Admin page
  - Added CompassHack
  - Added Minecraft Unity
  - Added RandomPac
  - Added SHRUBNAUT