@@ -28,7 +28,7 @@
 </div>
 <h1> Deltarune </h1>
 <p> Step 1: Download the g@me <a href="https://fastupload.io/d54a40a5876ba11d" target="_blank"> here.</a> </p>
-<p> Step 2: When the tab opens, click "download." </p>
+<p> Step 2: When the tab opens, click "download." Ignore the random other tabs that will open, just keep pressing download until it works. </p>
 <p> Step 3: When the download is finished, click "show in folder." </p>
 <p> Step 4: Move the "Deltarune" folder out of Downloads and into the Local Disk (C:). The easiest way to do this is to click and drag the file to
 the local disk button on the left hand side. You could also right click the folder, select copy, and paste into the local disk. </p>
