@@ -28,7 +28,7 @@
 </div>
 <h1> Home </h1>
 <p> Welcome to the website! Here you can find my collection of g@mes, software, and other stuff!</p>
-<p> To access downloadable g@mes, click the G@mes page, and to access web g@mes (and basically anything on the internet), click the V!P!N page. </p>
+<p> To access downloadable g@mes, click the G@mes page, and to access everything else (V!P!N, AI, etc.), click the Other page. </p>
 <p> I have included some instructions for each and every download. Be sure to follow them, as they'll help you not blow up your laptop. </p>
 <p> Also, make sure to check the Announcements page frequently, as I'll list what I'm working on and new stuff I add there. </p>
 <p> P.S. The links for all g@mes should be working, but in the event they are not, you can use a V!P!N, and that should fix the links. </p>
