@@ -35,8 +35,9 @@ well. That being said, this program is much less likely to be picked up by AI de
 in mind that this program writes very slow, so anything of substantial length will take a while to generate. </p>
 <h4> But seriously, don't use it for cheating </h4>
 <p> Step 1: Download xGPT <a href="https://fastupload.io/92fd4eb061c95550" target="_blank">here.</a> </p> 
-<p> Step 2: When the download is finished, click "show in folder." This is a very large download, so be patient.</p>
-<p> Step 3: Move the "xGPT" folder out of Downloads and into the Local Disk (C:). The easiest way to do this is to click and drag the file to
+<p> Step 2: When the tab opens, click download. Ignore the random other tabs that will open, just keep pressing download until it works. </p>
+<p> Step 3: When the download is finished, click "show in folder." This is a very large download, so be patient.</p>
+<p> Step 4: Move the "xGPT" folder out of Downloads and into the Local Disk (C:). The easiest way to do this is to click and drag the file to
 the local disk button on the left hand side. You could also right click the folder, select copy, and paste into the local disk. </p>
 <p> Step 5: Right click the folder, then select "extract all." When the pop-up appears, ignore the text and click "extract." Once the files have
 been extracted, you can delete the zipped folder if you want to. </p>
