@@ -1,0 +1,3 @@
+{
+"cleanUrls":true
+}
